--- a/public/style.css
+++ b/public/style.css
@@ -26,3 +26,10 @@ form div {
   align-items: center;
   padding: 0 15px;
 }
+
+.image {
+  display: block;
+  width: 100%;
+  height: 15em;
+  width: 20em;
+}
